# ai-toolkit

./: .env.example  .gitignore  CURSOR_ISSUES_VALIDATION.md  CURSOR_VALIDATION_README.md  FIXES_APPLIED.md  QUICK_REFERENCE.md  README.md  STREAMING_SIMPLIFICATION.md  VALIDATION_SUMMARY.md  ai_toolkit_plan_final.md  pyproject.toml  requirements.txt  setup.py  test_config_integration.py  test_error_integration.py  test_model_integration.py  test_prompt_integration.py  test_sample.json
ai_toolkit/: __init__.py
ai_toolkit/agents/: __init__.py  (+2 more)
config/: config.yaml  models.yaml
docs/: .gitkeep  IMPLEMENTATION_SUMMARY.md  MIDDLEWARE_UPDATE.md  config_workflow.md  langchain_request_structure_optimized.md  langchain_架构图解.md  modules_overview.md  modules_workflow.md  tmp.md  toolkit_modules.md
examples/: .gitkeep  1.model_access_methods_guide.py  2.simple_agent_basics.md  2.simple_agent_basics.py  3.advanced_agent_patterns.md  3.advanced_agent_patterns.py  4.message_toolkit_guide.py  5.tool_creation_guide.py  6.memory_management_guide.py  7.streaming_guide.py  8.config_guide.py  LEARNING_ROADMAP.md  QUICK_REFERENCE.md  README.md  README_simple_agent_basics.md  REFACTORING_SUMMARY.md  error_handling_example.py  prompt_management_example.py  streaming_example.py  token_management_example.py  toolkit_usage_guide.py
tests/: TEST_EXECUTION_REPORT.md  TEST_SUMMARY.md  debug_env.py  test_ai_toolkit_integration.py  test_api_keys.py  test_glm_connection.py  test_glm_message_types.py  test_middleware_utils.py  test_parser_integration.py  test_streaming_integration.py  test_token_integration.py  test_toolkit_validation.py  verify_api_keys.py
(+115 files in other folders)
